--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -3,8 +3,8 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:scrollbars="none"
-    >
+    xmlns:wheel="http://schemas.android.com/tools"
+    android:scrollbars="none">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -12,17 +12,36 @@
         android:layout_margin="5dp">
 
 
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/imageView_companyLogo"
-            android:src="@drawable/image"
-            android:layout_centerHorizontal="true" />
+
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/framelayout_image"
+            android:layout_marginTop="5dp">
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:id="@+id/imageView_companyLogo"
+                android:src="@drawable/image"
+                />
+
+            <com.pnikosis.materialishprogress.ProgressWheel
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/progress_wheel"
+                wheel:matProg_barColor="#5588FF"
+                wheel:matProg_progressIndeterminate="true"
+                android:layout_gravity="center" />
+
+        </FrameLayout>
 
         <android.support.v7.widget.CardView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView_companyLogo"
+            android:layout_below="@+id/framelayout_image"
             android:id="@+id/cardView_name"
             android:layout_marginTop="5dp">
             <LinearLayout
