--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,7 +13,7 @@
         android:text="@string/forget_password"
         android:textSize="15sp"
         android:textColor="@color/card_background"
-        android:id="@+id/textView2"
+        android:id="@+id/textView_forgetpasswd"
         android:layout_below="@+id/linearLayout_password"
         android:layout_alignRight="@+id/linearLayout_password"
         android:layout_alignEnd="@+id/linearLayout_password"
