--- a/app/src/main/res/layout/fragment_post_job.xml
+++ b/app/src/main/res/layout/fragment_post_job.xml
@@ -3,22 +3,42 @@
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:wheel="http://schemas.android.com/tools"
     android:scrollbars="none"
     android:padding="5dp">
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/imageView_companyLogo"
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/framelayout_image_job"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/image" />
+            android:layout_centerHorizontal="true" >
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:id="@+id/imageView_companyLogo"
+                android:src="@drawable/image" />
+
+            <com.pnikosis.materialishprogress.ProgressWheel
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/progress_wheel"
+                wheel:matProg_barColor="#5588FF"
+                wheel:matProg_progressIndeterminate="true"
+                android:layout_gravity="center" />
+
+
+        </FrameLayout>
+
+
         <android.support.v7.widget.CardView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageView_companyLogo"
+            android:layout_below="@+id/framelayout_image_job"
             android:id="@+id/cardView_name"
             android:layout_marginTop="5dp">
             <LinearLayout
