--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="horizontal_line">#a6a6a6</color>
 
 
-    <color name="grey_icon">#232323</color>
+    <color name="grey_icon">#2d2c2c</color>
 
 </resources>
