bus on back pressed + ui changes

--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -26,7 +26,9 @@
                 android:textSize="20sp"
                 android:layout_gravity="center"
                 android:inputType="text"
-                android:text="hbkhb name"
+                android:text=""
+                android:textColorHint="@color/white_hint"
+                android:hint="Full Name"
                 android:id="@+id/editText_signup_name"
                 android:textColor="@android:color/white"
                 android:background="@android:color/transparent"
@@ -50,8 +52,10 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_gravity="center"
-                android:text="hbkhb@g.com"
-                android:inputType="textEmailAddress"
+                android:text=""
+                android:hint="Email"
+                android:textColorHint="@color/white_hint"
+                android:inputType="textEmailAddress|textAutoComplete"
                 android:id="@+id/editText_signup_email"
                 android:textColor="@android:color/white"
                 android:background="@android:color/transparent"
@@ -75,7 +79,9 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_gravity="center"
-                android:text="password"
+                android:text=""
+                android:hint="Password"
+                android:textColorHint="@color/white_hint"
                 android:inputType="textPassword"
                 android:id="@+id/editText_signup_password"
                 android:textColor="@android:color/white"
