--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -51,7 +51,9 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_gravity="center"
-            android:text="ashishsurana@gmail.com"
+            android:text=""
+            android:hint="Email"
+            android:textColorHint="@color/white_hint"
             android:inputType="textEmailAddress"
             android:id="@+id/editText_login_email"
             android:textColor="@android:color/white"
@@ -82,7 +84,9 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_gravity="center"
-            android:text="password"
+            android:text=""
+            android:hint="Password"
+            android:textColorHint="@color/white_hint"
             android:inputType="textPassword"
             android:id="@+id/editText_login_password"
             android:textColor="@android:color/white"
