--- a/app/src/main/res/layout/list_layout_job.xml
+++ b/app/src/main/res/layout/list_layout_job.xml
@@ -8,16 +8,16 @@
     android:paddingTop="5dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:id="@+id/imageView_logo"
         android:layout_alignParentTop="true"
 
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/image"
-        android:layout_marginTop="3dp" />
+        android:layout_marginTop="5dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -82,7 +82,8 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
         android:layout_below="@+id/imageView5"
-        android:layout_toRightOf="@+id/imageView_logo"
         android:layout_toEndOf="@+id/imageView_logo"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:layout_alignLeft="@+id/imageView5"
+        android:layout_alignStart="@+id/imageView5" />
 </RelativeLayout>
