--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -55,7 +55,7 @@
                 android:text=""
                 android:hint="Email"
                 android:textColorHint="@color/white_hint"
-                android:inputType="textEmailAddress|textAutoComplete"
+                android:inputType="textAutoComplete"
                 android:id="@+id/editText_signup_email"
                 android:textColor="@android:color/white"
                 android:background="@android:color/transparent"
