--- a/app/src/main/res/layout/list_layout_events.xml
+++ b/app/src/main/res/layout/list_layout_events.xml
@@ -4,28 +4,29 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="0dp"
     android:paddingLeft="16dp"
-    android:paddingStart="16dp"
-    android:paddingTop="8dp">
+    >
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:src="@drawable/tehnika1"
         android:id="@+id/imageView_eventPic_list_layout"
-        android:layout_marginTop="3dp" />
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/TextView_eventName"
-        android:layout_alignBottom="@+id/imageView_eventPic_list_layout"
+        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/imageView_eventPic_list_layout"
         android:layout_toEndOf="@+id/imageView_eventPic_list_layout"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="22dp" />
+        android:layout_marginLeft="16dp" />
 
 
 
@@ -34,18 +35,10 @@
     <View
         android:layout_width="wrap_content"
         android:layout_height="1px"
-        android:layout_below="@+id/TextView_eventName"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginEnd="10dp"
         android:background="@color/grey"
 
-
-
-
-        android:layout_marginTop="8dp"
         android:id="@+id/linearLayout"
+        android:layout_below="@+id/imageView_eventPic_list_layout"
         android:layout_alignLeft="@+id/TextView_eventName"
         android:layout_alignStart="@+id/TextView_eventName" />
 
