--- a/app/src/main/res/layout/activity_post_login.xml
+++ b/app/src/main/res/layout/activity_post_login.xml
@@ -23,7 +23,7 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:name="com.example.ashish.alumini.fragments.FragmentMenu"
+        android:name="com.example.ashish.alumini.fragments.FragmentBottomMenu"
         android:id="@+id/fragmentMenuContainer"
         android:layout_alignParentBottom="true"
         tools:layout="@layout/fragment_menu_bottom" />
