--- a/app/src/main/res/layout/fragment_aboutapp.xml
+++ b/app/src/main/res/layout/fragment_aboutapp.xml
@@ -36,6 +36,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/developed_by"
         android:id="@+id/textView3"
+        android:textAlignment="center"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp" />
