--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragments.BlankFragment"
-        android:layout_above="@+id/button_filter">
+        android:layout_above="@+id/view2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -17,6 +17,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="YEAR"
+                android:textAlignment="viewStart"
+                style="?android:attr/borderlessButtonStyle"
+
                 android:id="@+id/button_year"/>
             >
             <fragment
@@ -27,10 +30,18 @@
 
                 android:name = "com.example.ashish.alumini.fragments.filter_fragments.FragmentFilterYear"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="@color/grey"/>
+
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="BRANCH"
+                android:textAlignment="viewStart"
+                style="?android:attr/borderlessButtonStyle"
                 android:id="@+id/button_branch"
                 android:layout_gravity="center_horizontal|top" />
             <fragment
@@ -40,18 +51,30 @@
                 android:id="@+id/fragment_container_branch"
                 android:name = "com.example.ashish.alumini.fragments.filter_fragments.FragmentFilterBranch"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="@color/grey"/>
 
         </LinearLayout>
     </ScrollView>
-    <Button
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Filter"
-        android:id="@+id/button_filter"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_margin="5dp"
+        android:id="@+id/view2">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Apply Filter"
+            style="?android:attr/borderlessButtonStyle"
+            android:id="@+id/button_apply_filter"
+ />
 
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
 
 
