--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -36,13 +36,14 @@
                         android:layout_alignTop="@+id/button_postjob"
                         android:layout_alignLeft="@+id/imageView"
                         android:layout_alignStart="@+id/imageView"
-                        android:layout_marginTop="13dp" />
+                        android:layout_marginTop="11dp" />
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:textAppearanceMedium"
                         android:text="@string/post_a_job"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         style="?android:attr/borderlessButtonStyle"
                         android:clickable="true"
                         android:id="@+id/button_postjob"
@@ -60,7 +61,7 @@
                         app:iiv_icon="faw-user"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:layout_marginTop="13dp"
+                        android:layout_marginTop="11dp"
                         android:layout_marginLeft="10dp"
                         android:layout_alignTop="@+id/button_myprofile"
                         android:layout_alignParentLeft="true"
@@ -73,6 +74,7 @@
                         android:text="@string/my_profile"
                         style="?android:attr/borderlessButtonStyle"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         android:id="@+id/button_myprofile"
                         android:layout_below="@+id/button_postjob"
                         android:layout_alignLeft="@+id/button_postjob"
@@ -92,6 +94,7 @@
                         style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/button_fbPage"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         android:layout_below="@+id/button_myprofile"
                         android:layout_alignLeft="@+id/button_myprofile"
                         android:layout_alignStart="@+id/button_myprofile" />
@@ -108,6 +111,7 @@
                         style="?android:attr/borderlessButtonStyle"
                         android:id="@+id/button_about_app"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         android:layout_below="@+id/button_fbPage"
                         android:layout_alignLeft="@+id/button_fbPage"
                         android:layout_alignStart="@+id/button_fbPage" />
@@ -124,6 +128,7 @@
                         android:text="@string/about_college"
                         android:id="@+id/button_about_college"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         android:textAppearance="?android:textAppearanceMedium"
                         style="?android:attr/borderlessButtonStyle"
                         android:layout_below="@+id/button_about_app"
@@ -141,6 +146,7 @@
                         android:text="@string/support_us"
                         android:id="@+id/button_support"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         android:textAppearance="?android:textAppearanceMedium"
                         style="?android:attr/borderlessButtonStyle"
                         android:layout_below="@+id/button_about_college"
@@ -159,6 +165,7 @@
                         android:text="@string/contact_us"
                         android:id="@+id/button_contact_us"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         android:textAppearance="?android:textAppearanceMedium"
                         style="?android:attr/borderlessButtonStyle"
                         android:layout_below="@+id/button_support"
@@ -176,6 +183,7 @@
                         android:id="@+id/button_faq"
                         android:textAppearance="?android:textAppearanceMedium"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         style="?android:attr/borderlessButtonStyle"
                         android:layout_below="@id/button_contact_us"
                         android:layout_alignLeft="@+id/button_rate_us"
@@ -194,6 +202,7 @@
                         android:id="@+id/button_rate_us"
                         android:layout_below="@id/button_faq"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         style="?android:attr/borderlessButtonStyle"
                         android:textAppearance="?android:textAppearanceMedium"
                         android:layout_alignLeft="@+id/button_about_college"
@@ -209,7 +218,7 @@
                         android:layout_below="@+id/button_myprofile"
                         android:layout_toLeftOf="@+id/button_postjob"
                         android:layout_toStartOf="@+id/button_postjob"
-                        android:layout_marginTop="13dp" />
+                        android:layout_marginTop="11dp" />
 
                     <com.mikepenz.iconics.view.IconicsImageView
                         app:iiv_color="@android:color/black"
@@ -220,7 +229,7 @@
 
                         android:layout_alignLeft="@+id/imageView6"
                         android:layout_alignStart="@+id/imageView6"
-                        android:layout_marginTop="13dp"
+                        android:layout_marginTop="11dp"
                         android:layout_below="@+id/button_fbPage" />
 
                     <com.mikepenz.iconics.view.IconicsImageView
@@ -233,7 +242,7 @@
                         android:layout_alignTop="@+id/button_about_college"
                         android:layout_toLeftOf="@+id/button_postjob"
                         android:layout_toStartOf="@+id/button_postjob"
-                        android:layout_marginTop="13dp" />
+                        android:layout_marginTop="11dp" />
 
 
 
@@ -246,7 +255,7 @@
                         android:layout_below="@+id/view11"
                         android:layout_alignLeft="@+id/imageView9"
                         android:layout_alignStart="@+id/imageView9"
-                        android:layout_marginTop="13dp" />
+                        android:layout_marginTop="11dp" />
 
                     <com.mikepenz.iconics.view.IconicsImageView
                         app:iiv_color="@android:color/black"
@@ -258,7 +267,7 @@
                         android:layout_alignTop="@+id/button_faq"
                         android:layout_alignLeft="@+id/imageView11"
                         android:layout_alignStart="@+id/imageView11"
-                        android:layout_marginTop="13dp" />
+                        android:layout_marginTop="11dp" />
 
                     <com.mikepenz.iconics.view.IconicsImageView
                         app:iiv_color="@android:color/black"
@@ -270,7 +279,7 @@
                         android:layout_below="@+id/button_faq"
                         android:layout_alignLeft="@+id/imageView12"
                         android:layout_alignStart="@+id/imageView12"
-                        android:layout_marginTop="13dp" />
+                        android:layout_marginTop="11dp" />
 
                     <com.mikepenz.iconics.view.IconicsImageView
                         app:iiv_color="@android:color/black"
@@ -282,7 +291,7 @@
                         android:layout_alignTop="@+id/button_contact_us"
                         android:layout_alignLeft="@+id/imageView11"
                         android:layout_alignStart="@+id/imageView11"
-                        android:layout_marginTop="13dp" />
+                        android:layout_marginTop="11dp" />
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
 
@@ -312,13 +321,14 @@
                         android:layout_alignTop="@+id/button_logout"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
-                        android:layout_marginTop="13dp" />
+                        android:layout_marginTop="11dp" />
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:textAppearanceMedium"
                         android:text="@string/log_out"
                         android:textAlignment="viewStart"
+                        android:gravity="start"
                         style="?android:attr/borderlessButtonStyle"
                         android:clickable="true"
                         android:textColor="#ff1744"
