--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -4,20 +4,9 @@
     android:layout_height="match_parent">
 
 
-    <com.mikepenz.iconics.view.IconicsImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/imageViewWebViewError"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="68dp" />
-
-
     <WebView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/webView">
-
-    </WebView>
+        android:id="@+id/webView"/>
 
 </RelativeLayout>
