some vaidations + improving strings + ic_launcher

--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -352,7 +352,7 @@
                         android:inputType="textUri"
                         android:id="@+id/editText_memberWebLink"
                         android:text="http://"
-                        android:hint="Web Links" />
+                        android:hint="Web / Fb / Twitter / Blog Link" />
 
                 </android.support.design.widget.TextInputLayout>
 
