--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -21,11 +21,13 @@
             android:id="@+id/framelayout_image"
             android:layout_marginTop="5dp">
 
-            <ImageView
+            <com.mikepenz.iconics.view.IconicsImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:id="@+id/imageView_companyLogo"
-                android:src="@drawable/image"
+                app:iiv_color="@color/grey"
+                app:iiv_icon="faw-user"
+
                 />
 
             <com.pnikosis.materialishprogress.ProgressWheel
