--- a/app/src/main/res/layout/fragment_job_details.xml
+++ b/app/src/main/res/layout/fragment_job_details.xml
@@ -23,12 +23,11 @@
             android:layout_marginTop="5dp" />
 
 
-        <ImageView
+        <com.mikepenz.iconics.view.IconicsImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:id="@+id/imageView_companyImage"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/image"
             android:contentDescription="@string/image_company"
             android:layout_marginTop="10dp" />
 
