--- a/app/src/main/res/layout/fragment_aboutapp.xml
+++ b/app/src/main/res/layout/fragment_aboutapp.xml
@@ -30,6 +30,24 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="5dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/github_link"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:layout_margin="5dp"/>
+
+    </android.support.v7.widget.CardView>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
