--- a/app/src/main/res/layout/list_layout_job.xml
+++ b/app/src/main/res/layout/list_layout_job.xml
@@ -12,11 +12,9 @@
         android:layout_height="60dp"
         android:id="@+id/imageView_logo"
         android:layout_alignParentTop="true"
-
         android:layout_marginLeft="15dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/image"
         android:layout_marginTop="5dp" />
 
     <TextView
@@ -28,8 +26,8 @@
         android:layout_marginLeft="19dp"
         android:textSize="18sp"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imageView_logo"
-        android:layout_toEndOf="@+id/imageView_logo"
+        android:layout_toRightOf="@id/imageView_logo"
+        android:layout_toEndOf="@id/imageView_logo"
         android:layout_marginStart="19dp" />
 
     <com.mikepenz.iconics.view.IconicsImageView
@@ -82,7 +80,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
         android:layout_below="@+id/imageView5"
-        android:layout_toEndOf="@+id/imageView_logo"
+        android:layout_toEndOf="@id/imageView_logo"
         android:layout_marginTop="15dp"
         android:layout_alignLeft="@+id/imageView5"
         android:layout_alignStart="@+id/imageView5" />
