--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
 
     <color name="horizontal_line">#a6a6a6</color>
 
+    <color name="black_de">#030303</color>
 
     <color name="grey_icon">#2d2c2c</color>
     <color name="white_hint">#a4a4a4</color>
