--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,7 @@
         <ImageView
             android:layout_width="115dp"
             android:layout_height="115dp"
+            android:contentDescription="college logo"
             android:background="@drawable/college_logo"
             android:id="@+id/splashscreen_logo"
             android:layout_alignParentTop="true"
