--- a/app/src/main/res/layout/fragment_menu_bottom.xml
+++ b/app/src/main/res/layout/fragment_menu_bottom.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:weightSum="4"
-        >
+        android:baselineAligned="false">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
