--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#e53935</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#ea2942</color>
     <color name="colorAccent">#e53935</color>
     <color name="cardview_dark_background">#e53935</color>
     <color name="grey">#9e9e9e</color>
