--- a/app/src/main/res/layout/fragment_jobs.xml
+++ b/app/src/main/res/layout/fragment_jobs.xml
@@ -8,5 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listView_jobs"
+        android:divider="@android:color/transparent"
         android:layout_margin="5dp" />
 </RelativeLayout>
