--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -88,10 +88,10 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:layout_below="@id/profileimage"
         android:background="@color/grey"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="-2dp"
+
+        android:layout_below="@+id/textView_location"
+        android:layout_toRightOf="@+id/profileimage"
         android:layout_toEndOf="@+id/profileimage"
-        android:layout_toRightOf="@+id/profileimage" />
+        android:layout_marginTop="10dp" />
 </RelativeLayout>
